Working BLAS flow for knn